--- a/pestaña2.html
+++ b/pestaña2.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Pestaña 2</h1>
-</body>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-8 mt-5">
+
+            <form action="mailto:ab279299@gmail.com">
+                
+                    <label for="nombre">Nombre: </label>
+                    <input id="nombre" class="form-control" name="nombre" type="text" />
+                    <label for="email">Email: </label>
+                    <input id="email" class="form-control" name="nombre" type="text" />
+                    ¿Qué te pareció la página?
+                    <textarea id="opinion" class="form-control" name="opinion"></textarea>
+                   <button type="submit" class="btn btn-primary">Enviar</button>
+                  
+            </form>
+            </div>
+        </div>
+    </div>
+  </body>
 </html>
