--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             ducimus amet quia aliquid sunt fuga sed enim nisi magni quo.
           </p>
           <a
-            href="http://127.0.0.1:5500/pestaña2.html"
+            href="/pilar.html"
             target="_blank"
             class="btn btn-color mt-sm-2 mt-md-5 animate-on-scroll" data-animation="animate__rubberBand"
             >Mas informacion</a
@@ -109,13 +109,13 @@
 
     
     <section
-    class="section-pilar container-fluid main-conf bg-3"
+    class="section-pilar container-fluid main-conf bg-2"
     id="section2"
     data-anchor="slide-2"
   >
     <div class="container">
       <div
-        class="card-body shadow-lg bg-linear-viaje px-5 py-5 animate-on-scroll" data-animation="animate__fadeInUp"
+        class="card-body shadow-lg bg-1 px-5 py-5 animate-on-scroll" data-animation="animate__fadeInUp"
       >
         <div class="row">
           <div class="col-12 col-md-7 text-center">
@@ -127,7 +127,7 @@
               ducimus amet quia aliquid sunt fuga sed enim nisi magni quo.
             </p>
             <a
-              href="http://127.0.0.1:5500/pestaña2.html"
+              href="/turismo.html"
               target="_blank"
               class="btn btn-color mt-sm-2 mt-md-5"
               >Mas informacion</a
