--- a/index.html
+++ b/index.html
@@ -1,158 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pilar - Descubre un Mundo Maravilloso</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.20/fullpage.min.css">
- -->
-
-    <script src="code.jquery.com_jquery-3.7.1.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.20/fullpage.min.js"></script> -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-
-    <link rel="stylesheet" href="style.css" />
+    <!-- Incluye Bootstrap y otras bibliotecas -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="section active section-banner" data-anchor="slide-1">
-      <div class="container-fluid bg-1">
-        <div class="row">
-          <div class="col-12">
-            <nav class="navbar navbar-expand-lg fixed-top bg-2">
-              <div class="container">
-                <a class="navbar-brand" href="/">Navbar</a>
-                <button
-                  class="navbar-toggler"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#navbarNav"
-                  aria-controls="navbarNav"
-                  aria-expanded="false"
-                  aria-label="Toggle navigation"
-                >
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div
-                  class="collapse navbar-collapse justify-content-end"
-                  id="navbarNav"
-                >
-                  <ul class="navbar-nav nv">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#section1"
-                        >Inicio</a
-                      >
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#section2">Viajes</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#section3">Autores</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link disabled" aria-disabled="true"
-                        >Disabled</a
-                      >
-                    </li>
-                  </ul>
+    <header>
+      <nav class="navbar navbar-expand-lg fixed-top shadow-sm" id="customNavbar">
+        <div class="container">
+          <a class="navbar-brand" href="/">Pilar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#section1">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#section2">Viajes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#section3">Autores</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#feedback">Feedback</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <div id="fullpage">
+        <!-- Sección de Inicio -->
+        <section class="section-banner section-pilar main-conf bg-1" id="section1">
+          <div class="container">
+            <div class="row justify-content-center align-items-center">
+              <div class="col-12 col-md-7 text-center">
+                <h1 class="animate-on-scroll" data-animation="animate__backInLeft">Pilar, una vista a un mundo maravilloso</h1>
+        
+                <p class="mt-5 animate__animated animate__backInLeft">
+                  Descubre la belleza de Pilar y su entorno natural. ¡Te sorprenderá!
+                </p>
+                <a href="/pilar.html" target="_blank" class="btn btn-color mt-sm-4 mb-sm-2 mt-md-5 animate__animated animate__rubberBand">Más información</a>
+              </div>
+              <div class="col-12 col-md-5 ps-3 mt-sm-5 d-flex align-items-center justify-content-center">
+                <img src="./img/banner.png" alt="Banner de Pilar" class="img-fluid animate__animated animate__fadeInUp" />
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Sección de Viajes -->
+        <section class="section-viaje section-pilar main-conf bg-2" id="section2">
+          <div class="container">
+            <div class="card-body shadow-lg bg-1 px-5 px-sm-3 py-sm-3 py-5">
+              <div class="row">
+                <div class="col-12 col-md-7 text-center">
+                  <h1>Descubre Pilar - Un Lugar de Aventuras</h1>
+                  <p class="mt-5">
+                    Explora las maravillas que Pilar tiene para ofrecer. Desde paisajes naturales hasta emocionantes actividades, hay algo para todos.
+                  </p>
+                  <a href="/turismo.html" target="_blank" class="btn btn-color mt-sm-2 mt-md-5">Más información</a>
+                </div>
+                <div class="col-8 offset-sm-3 col-md-5">
+                  <img src="./img/travel.png" alt="Viajes en Pilar" class="mt-sm-5 img-fluid" />
                 </div>
               </div>
-            </nav>
+            </div>
           </div>
-        </div>
-      </div>
-    </div>
+        </section>
 
-
-    <div id="fullpage">
-    <div class="section-pilar main-conf animate-section bg-linear-pilar" id="section1">
-      <div class="row justify-content-center align-items-center">
-        <div class="col-12 col-md-7 text-center">
-          <h1 class="animate-on-scroll" data-animation="animate__backInLeft">
-            Pilar, una vista a un mundo maravilloso
-          </h1>
-          <p class="mt-5" data-animation="animate__backInLeft">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-            ducimus amet quia aliquid sunt fuga sed enim nisi magni quo.
-          </p>
-          <a
-            href="/pilar.html"
-            target="_blank"
-            class="btn btn-color mt-sm-2 mt-md-5 animate-on-scroll" data-animation="animate__rubberBand"
-            >Mas informacion</a
-          >
-        </div>
-        <div class="col-12 col-md-5 ps-3">
-          <img
-            src="./img/banner.png"
-            width="100%"
-            alt=""
-            class="animate-on-scroll img-fluid" data-animation="animate__fadeInUp"
-          />
-        </div>
-      </div>
-    </div>
-
-    
-    <section
-    class="section-pilar container-fluid main-conf bg-2"
-    id="section2"
-    data-anchor="slide-2"
-  >
-    <div class="container">
-      <div
-        class="card-body shadow-lg bg-1 px-5 py-5 animate-on-scroll" data-animation="animate__fadeInUp"
-      >
-        <div class="row">
-          <div class="col-12 col-md-7 text-center">
-            <h1>
-              Pilar, una vista a un mundo maravilloso
-            </h1>
-            <p class="mt-5">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-              ducimus amet quia aliquid sunt fuga sed enim nisi magni quo.
-            </p>
-            <a
-              href="/turismo.html"
-              target="_blank"
-              class="btn btn-color mt-sm-2 mt-md-5"
-              >Mas informacion</a
-            >
+        <!-- Sección de Autores -->
+        <section class="section-autores section-pilar main-conf bg-1" id="section3">
+          <div class="container">
+            <div class="row">
+              <div class="col-12 text-center">
+                <h2>Autores</h2>
+              </div>
+            </div>
           </div>
-          <div class="col-12 col-md-5">
-            <img src="./img/travel.png" width="100%" alt="" class="mt-sm-5" />
+        </section>
+
+        <!-- Sección de Feedback -->
+        <section class="section-feedback section-pilar main-conf bg-1" id="feedback">
+          <div class="container mt-5">
+            <div class="row justify-content-center">
+              <div class="col-md-6">
+                <h2>Formulario de Retroalimentación</h2>
+                <form id="feedbackForm">
+                  <div class="form-group">
+                    <label for="correo">Correo electrónico</label>
+                    <input type="email" class="form-control" id="correo" placeholder="Ingresa tu correo electrónico" required>
+                  </div>
+                  <div class="form-group">
+                    <label for="mensaje">Mensaje</label>
+                    <textarea class="form-control" id="mensaje" rows="4" placeholder="Escribe tu mensaje" required></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Enviar Comentario</button>
+                </form>
+              </div>
+            </div>
           </div>
-        </div>
+        </section>
       </div>
-    </div>
-  </section>
+    </main>
 
-    <section class="section-pilar autores main-conf bg-1" id="section3">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <h2>Autores</h2>
-          </div>
-        </div>
-      </div>
-    </section>
-  </div>
-
-
+    <footer>
+      <!-- Agrega aquí el contenido del pie de página si es necesario -->
+    </footer>
 
     <script src="app.js"></script>
   </body>
