--- a/index.html
+++ b/index.html
@@ -1,41 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pilar - Descubre un Mundo Maravilloso</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pilar</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 
-    <!-- Incluye Bootstrap y otras bibliotecas -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg fixed-top shadow-sm" id="customNavbar">
-        <div class="container">
-          <a class="navbar-brand" href="/">Pilar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#section1">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#section2">Viajes</a>
+                <a class="nav-link" href="#">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#section3">Autores</a>
+                <a class="nav-link" href="#">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#feedback">Feedback</a>
+                <a
+                  class="nav-link disabled"
+                  href="#"
+                  tabindex="-1"
+                  aria-disabled="true"
+                  >Disabled</a
+                >
               </li>
             </ul>
           </div>
@@ -44,85 +64,217 @@
     </header>
 
     <main>
-      <div id="fullpage">
-        <!-- Sección de Inicio -->
-        <section class="section-banner section-pilar main-conf bg-1" id="section1">
-          <div class="container">
-            <div class="row justify-content-center align-items-center">
-              <div class="col-12 col-md-7 text-center">
-                <h1 class="animate-on-scroll" data-animation="animate__backInLeft">Pilar, una vista a un mundo maravilloso</h1>
-        
-                <p class="mt-5 animate__animated animate__backInLeft">
-                  Descubre la belleza de Pilar y su entorno natural. ¡Te sorprenderá!
+      <section class="viewport">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12 bg-banner">
+              <h1 class="text-center my-5">Historias del Pilar</h1>
+              <br />
+              <p class="text-center">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+                ratione nihil nobis enim. Necessitatibus, quaerat.
+              </p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12 my-5">
+              <h2 class="text-center">Titulo 2</h2>
+            </div>
+
+            <div class="col-12 col-md-4">
+              <h3>Titulo 3</h3>
+              <br />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Recusandae eveniet, sint dignissimos facilis nulla corporis.
+              </p>
+            </div>
+            <div class="col-12 col-md-4">
+              <h3>Titulo 3</h3>
+              <br />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Recusandae eveniet, sint dignissimos facilis nulla corporis.
+              </p>
+            </div>
+            <div class="col-12 col-md-4">
+              <h3>Titulo 3</h3>
+              <br />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Recusandae eveniet, sint dignissimos facilis nulla corporis.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="section card mx-5 py-5 my-5 shadow-lg rounded border-0 bg-img"
+        id="section2"
+      >
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <h2 class="card-title text-center my-3">Titulo card</h2>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <div class="py-4">
+                <img
+                  src="https://i.pinimg.com/564x/42/ee/3e/42ee3e7377caece4500b6b6e87551440.jpg"
+                  class="img-fluid rounded"
+                />
+                <h5 class="text-center card-title my-3">Titulo card</h5>
+                <p class="parrafo">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Labore ipsum rerum repellat et! Reiciendis libero possimus
+                  ipsum alias porro sint, voluptatum soluta eaque modi.?
                 </p>
-                <a href="/pilar.html" target="_blank" class="btn btn-color mt-sm-4 mb-sm-2 mt-md-5 animate__animated animate__rubberBand">Más información</a>
               </div>
-              <div class="col-12 col-md-5 ps-3 mt-sm-5 d-flex align-items-center justify-content-center">
-                <img src="./img/banner.png" alt="Banner de Pilar" class="img-fluid animate__animated animate__fadeInUp" />
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <div class="py-4">
+                <img
+                  src="https://i.pinimg.com/564x/42/ee/3e/42ee3e7377caece4500b6b6e87551440.jpg"
+                  class="img-fluid rounded"
+                />
+                <h5 class="text-center card-title my-3">Titulo card</h5>
+                <p class="parrafo">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Labore ipsum rerum repellat et! Reiciendis libero possimus
+                  ipsum alias porro sint, voluptatum soluta eaque modi.?
+                </p>
+              </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <div class="py-4">
+                <img
+                  src="https://i.pinimg.com/564x/42/ee/3e/42ee3e7377caece4500b6b6e87551440.jpg"
+                  class="img-fluid rounded"
+                />
+                <h5 class="text-center card-title my-3">Titulo card</h5>
+                <p class="parrafo">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Labore ipsum rerum repellat et! Reiciendis libero possimus
+                  ipsum alias porro sint, voluptatum soluta eaque modi.?
+                </p>
               </div>
             </div>
           </div>
-        </section>
+        </div>
+      </section>
 
-        <!-- Sección de Viajes -->
-        <section class="section-viaje section-pilar main-conf bg-2" id="section2">
-          <div class="container">
-            <div class="card-body shadow-lg bg-1 px-5 px-sm-3 py-sm-3 py-5">
-              <div class="row">
-                <div class="col-12 col-md-7 text-center">
-                  <h1>Descubre Pilar - Un Lugar de Aventuras</h1>
-                  <p class="mt-5">
-                    Explora las maravillas que Pilar tiene para ofrecer. Desde paisajes naturales hasta emocionantes actividades, hay algo para todos.
+      <section class="section my-4" id="section3">
+        <div class="container">
+          <div class="row mt-4">
+            <div class="col-12 my-5">
+              <h2 class="text-center">Titulo 2</h2>
+            </div>
+
+            <div class="col-12 col-md-4">
+              <h3>Titulo 3</h3>
+              <br />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Recusandae eveniet, sint dignissimos facilis nulla corporis.
+              </p>
+            </div>
+            <div class="col-12 col-md-4">
+              <h3>Titulo 3</h3>
+              <br />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Recusandae eveniet, sint dignissimos facilis nulla corporis.
+              </p>
+            </div>
+            <div class="col-12 col-md-4">
+              <h3>Titulo 3</h3>
+              <br />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Recusandae eveniet, sint dignissimos facilis nulla corporis.
+              </p>
+            </div>
+          </div>
+
+          <div class="row my-5 justify-content-center align-items-center">
+            <div class="col-12">
+              <h2 class="text-center my-5">Titulo card</h2>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
+              <div class="card border-info">
+                <div class="card-header">Header</div>
+                <div class="card-body">
+                  <h5 class="card-title">Info card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
                   </p>
-                  <a href="/turismo.html" target="_blank" class="btn btn-color mt-sm-2 mt-md-5">Más información</a>
-                </div>
-                <div class="col-8 offset-sm-3 col-md-5">
-                  <img src="./img/travel.png" alt="Viajes en Pilar" class="mt-sm-5 img-fluid" />
                 </div>
               </div>
             </div>
-          </div>
-        </section>
 
-        <!-- Sección de Autores -->
-        <section class="section-autores section-pilar main-conf bg-1" id="section3">
-          <div class="container">
-            <div class="row">
-              <div class="col-12 text-center">
-                <h2>Autores</h2>
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
+              <div class="card border-info">
+                <div class="card-header">Header</div>
+                <div class="card-body">
+                  <h5 class="card-title">Info card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
-        </section>
 
-        <!-- Sección de Feedback -->
-        <section class="section-feedback section-pilar main-conf bg-1" id="feedback">
-          <div class="container mt-5">
-            <div class="row justify-content-center">
-              <div class="col-md-6">
-                <h2>Formulario de Retroalimentación</h2>
-                <form id="feedbackForm">
-                  <div class="form-group">
-                    <label for="correo">Correo electrónico</label>
-                    <input type="email" class="form-control" id="correo" placeholder="Ingresa tu correo electrónico" required>
-                  </div>
-                  <div class="form-group">
-                    <label for="mensaje">Mensaje</label>
-                    <textarea class="form-control" id="mensaje" rows="4" placeholder="Escribe tu mensaje" required></textarea>
-                  </div>
-                  <button type="submit" class="btn btn-primary">Enviar Comentario</button>
-                </form>
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
+              <div class="card border-info">
+                <div class="card-header">Header</div>
+                <div class="card-body">
+                  <h5 class="card-title">Info card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
               </div>
             </div>
+
           </div>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
 
     <footer>
-      <!-- Agrega aquí el contenido del pie de página si es necesario -->
+      <div class="container my-sm-5">
+        <div class="row">
+          <div class="col">
+            <div class="px-4 pt-5 my-5 text-center">
+              <h1 class="display-4 fw-bold">Equipo de Ari</h1>
+              <div class="col-lg-6 mx-auto">
+                <p class="lead ">Palabras de agradecimiento y resutados de lo realizado Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo dolor, optio perferendis explicabo nostrum reprehenderit.</p>
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+                  <a href="https://www.instagram.com/arii_barb/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw==" class="btn btn-primary btn-ig btn-lg px-4 me-sm-3" target="_blank">Nuestro Instagram
+                    <i class="fab fa-instagram"></i>
+                  </a>
+                  <button type="button" class="btn btn-outline-secondary btn-lg px-4">Envianos un Email
+                    <i class="fab fa-solid fa-envelope"></i>
+                  </button>
+                  
+                </div>
+              </div>
+              <div class="overflow-hidden">
+                <div class="container px-5">
+                  <img src="/img/travel.png" class="img-fluid" alt="Example image">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
-
-    <script src="app.js"></script>
   </body>
 </html>
