--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
               </div>
               <div class="overflow-hidden">
                 <div class="container px-5">
-                  <img src="/img/travel.png" class="img-fluid" alt="Example image">
+                  <img src="img/travel.png" class="img-fluid" alt="Example image">
                 </div>
               </div>
             </div>
