--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -21,41 +23,38 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body class="bg-body">
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+      <nav
+        class="navbar navbar-expand-lg fixed-top shadow-sm bg-header"
+        id="customNavbar"
+      >
+        <div class="container">
+          <a class="navbar-brand" href="/">Pilar</a>
           <button
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNav"
+          >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="historia.html">Historia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="autores.html">Autores</a>
               </li>
               <li class="nav-item">
-                <a
-                  class="nav-link disabled"
-                  href="#"
-                  tabindex="-1"
-                  aria-disabled="true"
-                  >Disabled</a
-                >
+                <a class="nav-link" href="feedback.html">Feedback</a>
               </li>
             </ul>
           </div>
@@ -64,11 +63,11 @@
     </header>
 
     <main>
-      <section class="viewport">
+      <section class="viewport mt-5">
         <div class="container-fluid">
           <div class="row">
             <div class="col-12 bg-banner">
-              <h1 class="text-center my-5">Historias del Pilar</h1>
+              <h1 class="text-center fw-bolder my-5">Personajes de Pilar</h1>
               <br />
               <p class="text-center">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
@@ -242,7 +241,6 @@
                 </div>
               </div>
             </div>
-
           </div>
         </div>
       </section>
@@ -255,20 +253,37 @@
             <div class="px-4 pt-5 my-5 text-center">
               <h1 class="display-4 fw-bold">Equipo de Ari</h1>
               <div class="col-lg-6 mx-auto">
-                <p class="lead ">Palabras de agradecimiento y resutados de lo realizado Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo dolor, optio perferendis explicabo nostrum reprehenderit.</p>
-                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-                  <a href="https://www.instagram.com/arii_barb/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw==" class="btn btn-primary btn-ig btn-lg px-4 me-sm-3" target="_blank">Nuestro Instagram
+                <p class="lead">
+                  Palabras de agradecimiento y resutados de lo realizado Lorem
+                  ipsum dolor sit amet consectetur, adipisicing elit. Quo dolor,
+                  optio perferendis explicabo nostrum reprehenderit.
+                </p>
+                <div
+                  class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5"
+                >
+                  <a
+                    href="https://www.instagram.com/arii_barb/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw=="
+                    class="btn btn-primary btn-ig btn-lg px-4 me-sm-3"
+                    target="_blank"
+                    >Nuestro Instagram
                     <i class="fab fa-instagram"></i>
                   </a>
-                  <button type="button" class="btn btn-outline-secondary btn-lg px-4">Envianos un Email
+                  <button
+                    type="button"
+                    class="btn btn-outline-secondary btn-lg px-4"
+                  >
+                    Envianos un Email
                     <i class="fab fa-solid fa-envelope"></i>
                   </button>
-                  
                 </div>
               </div>
               <div class="overflow-hidden">
                 <div class="container px-5">
-                  <img src="/img/travel.png" class="img-fluid" alt="Example image">
+                  <img
+                    src="img/travel.png"
+                    class="img-fluid"
+                    alt="Example image"
+                  />
                 </div>
               </div>
             </div>
