--- a/autores.html
+++ b/autores.html
@@ -63,7 +63,41 @@
       </header>
 
     <main>
-        <h1>Titulo de seccion</h1>
+        <section class="viewport my-5">
+          <div class="container-fluid g-0">
+            <div class="row">
+              <div class="col-12 banner-autor">
+                <h1 class="text-center fw-bolder my-5">Personajes de Pilar</h1>
+                <br />
+                <p class="text-center">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+                  ratione nihil nobis enim. Necessitatibus, quaerat.
+                </p>
+              </div>
+
+              <div class="row justify-content-center align-items-center g-0">
+                <div class="col-sm-12 col-md-6">
+                  <img src="img/banner2.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 text-center my-sm-3 px-5">
+                  <h2 class="my-2">Titulo 2</h2>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At amet nam aspernatur dolor enim sed debitis beatae! Similique ipsa incidunt quos ipsam facere animi!</p>
+                  <a href="http://" class="btn btn-primary my-2">Boton de información</a>
+                </div>
+
+                <div class="col-sm-12 col-md-6 text-center my-sm-3 px-5 order-sm-2 order-md-2">
+                  <h2 class="my-2">Titulo 2</h2>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At amet nam aspernatur dolor enim sed debitis beatae! Similique ipsa incidunt quos ipsam facere animi!</p>
+                  <a href="http://" class="btn btn-primary my-2">Boton de información</a>
+                </div>
+                <div class="col-sm-12 col-md-6 order-sm-1 order-md-2">
+                  <img src="img/banner2.jpg" class="img-fluid" alt="">
+                </div>
+
+              </div>
+            </div>
+        </section>
+
     </main>
 </body>
 </html>
