--- a/index.html
+++ b/index.html
@@ -3,27 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pilar</title>
+    <title>Hsitorias</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+    crossorigin="anonymous"
+  />
+  <link rel="stylesheet" href="style.css" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+  />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"
+  ></script>
+
   </head>
-  <body class="bg-body"> 
+  <body class="bg-body">
+
+
     <header>
       <nav
         class="navbar navbar-expand-lg fixed-top shadow-sm bg-header"
@@ -48,10 +51,10 @@
                 <a class="nav-link" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="historia.html">Historia</a>
+                <a class="nav-link" href="personajes.html">Personajes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="autores.html">Autores</a>
+                <a class="nav-link" href="turismo.html">Turismo</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="feedback.html">Feedback</a>
@@ -62,230 +65,80 @@
       </nav>
     </header>
 
-    <main>
-      <section class="viewport mt-5">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-12 bg-banner">
-              <h1 class="text-center fw-bolder my-5">Personajes de Pilar</h1>
-              <br />
-              <p class="text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
-                ratione nihil nobis enim. Necessitatibus, quaerat.
-              </p>
-            </div>
-          </div>
 
-          <div class="row">
-            <div class="col-12 my-5">
-              <h2 class="text-center">Titulo 2</h2>
-            </div>
 
-            <div class="col-12 col-md-4">
-              <h3>Titulo 3</h3>
-              <br />
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Recusandae eveniet, sint dignissimos facilis nulla corporis.
-              </p>
-            </div>
-            <div class="col-12 col-md-4">
-              <h3>Titulo 3</h3>
-              <br />
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Recusandae eveniet, sint dignissimos facilis nulla corporis.
-              </p>
-            </div>
-            <div class="col-12 col-md-4">
-              <h3>Titulo 3</h3>
-              <br />
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Recusandae eveniet, sint dignissimos facilis nulla corporis.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section
-        class="section card mx-5 py-5 my-5 shadow-lg rounded border-0 bg-img"
-        id="section2"
-      >
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <h2 class="card-title text-center my-3">Titulo card</h2>
-            </div>
-
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <div class="py-4">
-                <img
-                  src="https://i.pinimg.com/564x/42/ee/3e/42ee3e7377caece4500b6b6e87551440.jpg"
-                  class="img-fluid rounded"
-                />
-                <h5 class="text-center card-title my-3">Titulo card</h5>
-                <p class="parrafo">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Labore ipsum rerum repellat et! Reiciendis libero possimus
-                  ipsum alias porro sint, voluptatum soluta eaque modi.?
-                </p>
-              </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <div class="py-4">
-                <img
-                  src="https://i.pinimg.com/564x/42/ee/3e/42ee3e7377caece4500b6b6e87551440.jpg"
-                  class="img-fluid rounded"
-                />
-                <h5 class="text-center card-title my-3">Titulo card</h5>
-                <p class="parrafo">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Labore ipsum rerum repellat et! Reiciendis libero possimus
-                  ipsum alias porro sint, voluptatum soluta eaque modi.?
-                </p>
-              </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <div class="py-4">
-                <img
-                  src="https://i.pinimg.com/564x/42/ee/3e/42ee3e7377caece4500b6b6e87551440.jpg"
-                  class="img-fluid rounded"
-                />
-                <h5 class="text-center card-title my-3">Titulo card</h5>
-                <p class="parrafo">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Labore ipsum rerum repellat et! Reiciendis libero possimus
-                  ipsum alias porro sint, voluptatum soluta eaque modi.?
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="section my-4" id="section3">
-        <div class="container">
-          <div class="row mt-4">
-            <div class="col-12 my-5">
-              <h2 class="text-center">Titulo 2</h2>
-            </div>
-
-            <div class="col-12 col-md-4">
-              <h3>Titulo 3</h3>
-              <br />
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Recusandae eveniet, sint dignissimos facilis nulla corporis.
-              </p>
-            </div>
-            <div class="col-12 col-md-4">
-              <h3>Titulo 3</h3>
-              <br />
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Recusandae eveniet, sint dignissimos facilis nulla corporis.
-              </p>
-            </div>
-            <div class="col-12 col-md-4">
-              <h3>Titulo 3</h3>
-              <br />
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Recusandae eveniet, sint dignissimos facilis nulla corporis.
-              </p>
-            </div>
-          </div>
-
-          <div class="row my-5 justify-content-center align-items-center">
-            <div class="col-12">
-              <h2 class="text-center my-5">Titulo card</h2>
-            </div>
-
-            <div class="col-12 col-md-6 col-lg-4 mb-4">
-              <div class="card border-info">
-                <div class="card-header">Header</div>
-                <div class="card-body">
-                  <h5 class="card-title">Info card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-12 col-md-6 col-lg-4 mb-4">
-              <div class="card border-info">
-                <div class="card-header">Header</div>
-                <div class="card-body">
-                  <h5 class="card-title">Info card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-12 col-md-6 col-lg-4 mb-4">
-              <div class="card border-info">
-                <div class="card-header">Header</div>
-                <div class="card-body">
-                  <h5 class="card-title">Info card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <footer>
-      <div class="container my-sm-5">
-        <div class="row">
-          <div class="col">
-            <div class="px-4 pt-5 my-5 text-center">
-              <h1 class="display-4 fw-bold">Equipo de Ari</h1>
-              <div class="col-lg-6 mx-auto">
-                <p class="lead">
-                  Palabras de agradecimiento y resutados de lo realizado Lorem
-                  ipsum dolor sit amet consectetur, adipisicing elit. Quo dolor,
-                  optio perferendis explicabo nostrum reprehenderit.
-                </p>
-                <div
-                  class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5"
-                >
-                  <a
-                    href="https://www.instagram.com/arii_barb/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw=="
-                    class="btn btn-primary btn-ig btn-lg px-4 me-sm-3"
-                    target="_blank"
-                    >Nuestro Instagram
-                    <i class="fab fa-instagram"></i>
-                  </a>
-                  <button
-                    type="button"
-                    class="btn btn-outline-secondary btn-lg px-4"
-                  >
-                    Envianos un Email
-                    <i class="fab fa-solid fa-envelope"></i>
-                  </button>
-                </div>
-              </div>
-              <div class="overflow-hidden">
-                <div class="container px-5">
-                  <img src="img/travel.png" class="img-fluid" alt="Example image">
-                </div>
-              </div>
-            </div>
-          </div>
+    <div class="container-fluid my-5">
+      <div class="row">
+        <div class="col-12 bg-historia-banner">
+          <h1 class="text-center my-5 fw-bolder text-titulo">
+            Historias del Pilar
+          </h1>
+          <br />
+          <p class="text-center fs-4">
+            ¡¡Bienvenido a esta maravillosa Aventura!!
+          </p>
         </div>
       </div>
-    </footer>
+
+      <div class="container py-5">
+        <div class="row">
+          <div class="col-8">
+            <h2 class="fs-2 fw-bolder">
+              Remontémonos a aquellas épocas en la que la ciudad apenas estaba
+              en sus cimientos
+            </h2>
+            <p class="text-center parrafo">
+              Fue fundada por orden del gobernador intendente Pedro Mello de Portugal el 12 de octubre de 1779 con el nombre de Villa del Ñeembucú. Cuatro años más tarde fue llamada Villa del Pilar. 
+              En el gobierno de Gaspar Rodríguez de Francia el Puerto de Pilar fue uno de los únicos habilitados en todo el Paraguay para el comercio con el exterior, comercializando principalmente yerba mate y algodón.
+              Pilar tuvo un papel importante en la Guerra de la Triple Alianza (1864-1870), en la que Paraguay se enfrentó a Brasil, Argentina y Uruguay. La ciudad fue escenario de batallas y conflictos durante esta guerra devastadora.
+              Después de la guerra, Pilar y Ñeembucú se recuperaron lentamente. La agricultura, la ganadería y la navegación fluvial se convirtieron en actividades económicas fundamentales para la región. En 1983 ocurrió una inundación que dejó bajo agua a prácticamente toda la ciudad, por esta razón en la actualidad la misma está rodeada de muros de contención.
+              En el año 2000 se terminó de unir el tramo asfaltado de la Ruta IV ''Gral. José Eduvigis Díaz'', de este modo la ciudad dejó de quedar aislada del país, por tramo de tierra.
+              En la actualidad, Pilar es una ciudad tranquila con una economía basada en la agricultura, la pesca y el turismo. La ciudad se destaca por su arquitectura colonial y su cultura arraigada en la tradición paraguaya.
+            </p>
+          </div>
+          <div class="col-sm-12 col-lg-2">
+            <h3 class="text-center parrafo">Ciudad de Pilar</h3>
+            <p>
+              Pilar es la ciudad capital del departamento de Ñeembucú en el Paraguay. Se encuentra ubicada a 358 km de Asunción, a orillas del río Paraguay y del arroyo Ñeembucú, en la frontera con la República Argentina.
+            </p>
+          </div>
+
+
+          <div class="col-12 my-3">
+            <h2 class="fs-4 fw-bolder text-center">Si te gustaria conocer más sobre Pilar, aquí te dejamos algunos datos.</h2>
+          </div>
+
+          <div class="row d-flex justify-content-center align-items-center my-2">
+          <div class="col-sm-6 col-md-4">
+            <ul class="list-unstyled">
+              <ul>
+                <li>El primer poblador y organizador del poblado fue el capitán Juan de Jara</li>
+                <li>Pilar se divide en un total de 34 barrios</li>
+              </ul>
+            </ul>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <ul class="list-unstyled">
+              <ul>
+                <li>Pilar es una ciudad comercial, turística e industrial.</li>
+                <li>Suele ser conocida como "la Auténtica Perla del Sur"</li>
+              </ul>
+            </ul>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <ul class="list-unstyled">
+              <ul>
+                <li>Otro apodo es la Capital de la Cordialidad Paraguaya</li>
+                <li>Pilar cuenta con 29 327 habitantes en total</li>
+              </ul>
+            </ul>
+          </div>
+        </div>
+
+        </div>
+      </div>
+    </div>
   </body>
 </html>
+
+
