--- a/personajes.html
+++ b/personajes.html
@@ -30,7 +30,7 @@
         id="customNavbar"
       >
         <div class="container">
-          <a class="navbar-brand" href="https://hardyan12.github.io/PilarCity/">Pilar</a>
+          <a class="navbar-brand" href="index.html">Pilar</a>
           <button
             class="navbar-toggler"
             type="button"
