--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
       </div>
 
-      <div class="container py-5">
+      <div class="container-fluid py-5">
         <div class="row">
           <div class="col-8">
             <h2 class="fs-2 fw-bolder">
@@ -96,14 +96,17 @@
               En la actualidad, Pilar es una ciudad tranquila con una economía basada en la agricultura, la pesca y el turismo. La ciudad se destaca por su arquitectura colonial y su cultura arraigada en la tradición paraguaya.
             </p>
           </div>
-          <div class="col-sm-12 col-lg-2">
+          <div class="col-sm-12 col-lg-4">
             <h3 class="text-center parrafo">Ciudad de Pilar</h3>
-            <p>
+            <p class="parrafo">
               Pilar es la ciudad capital del departamento de Ñeembucú en el Paraguay. Se encuentra ubicada a 358 km de Asunción, a orillas del río Paraguay y del arroyo Ñeembucú, en la frontera con la República Argentina.
             </p>
+            <img src="img/pilar.jpeg" alt="" class="img-fluid shadow rounded">
           </div>
 
-
+          
+          <div class="section card mx-5 py-5 my-5 shadow-lg rounded border-0 bg-img"
+          id="section2">
           <div class="col-12 my-3">
             <h2 class="fs-4 fw-bolder text-center">Si te gustaria conocer más sobre Pilar, aquí te dejamos algunos datos.</h2>
           </div>
@@ -134,6 +137,7 @@
             </ul>
           </div>
         </div>
+      </div>
 
         </div>
       </div>
