--- a/turismo.html
+++ b/turismo.html
@@ -16,7 +16,7 @@
   </script>
 </head>
 
-<body class="bg-body">
+<body class="bg-body overflow-x-hidden">
   <header>
     <nav class="navbar navbar-expand-lg fixed-top shadow-sm bg-header" id="customNavbar">
       <div class="container">
@@ -79,7 +79,7 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Basilica menor nuestra señora del Pilar</h1>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Museo Cabildo de Pilar</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body text-center">
@@ -96,7 +96,7 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Basilica menor nuestra señora del Pilar</h1>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Plaza Mcal. López</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body text-center">
@@ -114,7 +114,7 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Basilica menor nuestra señora del Pilar</h1>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Paseos de paraguas</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body text-center">
@@ -132,7 +132,7 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Basilica menor nuestra señora del Pilar</h1>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">La Costanera</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body text-center">
@@ -149,7 +149,7 @@
     <section class="viewport my-5">
       <div class="container-fluid g-0">
         <div class="row">
-          <div class="col-12 banner-autor">
+          <div class="col-12 banner-autor shadow">
             <h1 class="text-center fw-bolder my-3 text-titulo">La bella y culta ciudad de Pilar ofrece distintos
               atractivos turísticos.</h1>
             <br />
@@ -162,7 +162,7 @@
 
           <div class="row justify-content-center align-items-center g-0">
             <div class="col-sm-12 col-md-6">
-              <img src="img/iglesiapilar.jpg" class="img-fluid" alt="">
+              <img src="img/iglesiapilar.jpg" class="img-fluid rounded shadow-lg" alt="">
             </div>
             <div class="col-sm-12 col-md-6 text-center my-sm-3 px-5">
               <h2 class="my-2">Basílica Menor Nuestra Señora del Pilar</h2>
@@ -190,11 +190,11 @@
             </button>
             </div>
             <div class="col-sm-12 col-md-6">
-              <img src="img/MuseoCabildo.jpg" class="img-fluid" width="100%" alt="">
+              <img src="img/MuseoCabildo.jpg" class="img-fluid shadow rounded" width="100%" alt="">
             </div>
 
             <div class="col-sm-12 col-md-6">
-              <img src="img/PlazaMcal.jpg" class="img-fluid" alt="">
+              <img src="img/PlazaMcal.jpg" class="img-fluid shadow-lg rounded" alt="">
             </div>
             <div class="col-sm-12 col-md-6 text-center my-sm-3 px-5">
               <h2 class="my-2">Plaza Mcal. López</h2>
@@ -223,11 +223,11 @@
             </button>
             </div>
             <div class="col-sm-12 col-md-6">
-              <img src="img/PaseoParagua.jpg" class="img-fluid" width="100%" alt="">
+              <img src="img/PaseoParagua.jpg" class="img-fluid shadow-lg rounded" width="100%" alt="">
             </div>
 
             <div class="col-sm-12 col-md-6">
-              <img src="img/LaCostanera.png" class="img-fluid" width="100%" alt="">
+              <img src="img/LaCostanera.png" class="img-fluid shadow-lg rounded" width="100%" alt="">
             </div>
             <div class="col-sm-12 col-md-6 text-center my-sm-3 px-5">
               <h2 class="my-2">La Costanera</h2>
@@ -289,25 +289,25 @@
           </div>
           <div class="col-sm-12 col-md-4">            
             <div class="list-group">
-              <a href="" class="list-group-item list-group-item-action bg-autor-active" aria-current="true">
+              <div class="list-group-item list-group-item-action bg-autor-active" aria-current="true">
                 <div class="d-flex w-100 justify-content-between">
                 </div>
                 <p class="mb-1 fst-italic">Hotel Monumental I</p>
                 <p class="mb-1 fst-italic">Las Garzas Hotel </p>
                 
-              </a>
-              <a href="" class="list-group-item list-group-item-action bg-autor-active">
+              </div>
+              <div class="list-group-item list-group-item-action bg-autor-active">
                 <div class="d-flex w-100 justify-content-between">
                 </div>
                 <p class="mb-1 fst-italic">Las Hortensias Hotel Boutique</p>
                 <p class="mb-1 fst-italic">Hotel Malian</p>
-              </a>
-              <a href="" class="list-group-item list-group-item-action bg-autor-active">
+              </div>
+              <div class="list-group-item list-group-item-action bg-autor-active">
                 <div class="d-flex w-100 justify-content-between">
                 </div>
                 <p class="mb-1 fst-italic">Pilar Plaza Hotel</p>
                 <p class="mb-1 fst-italic">Hotel el Paisano</p>
-              </a>
+              </div>
             </div>
           </div>
         </div>
@@ -320,32 +320,32 @@
           </div>
           <div class="col-sm-12 col-md-4">            
             <div class="list-group">
-              <a href="" class="list-group-item list-group-item-action bg-autor-active" aria-current="true">
+              <div class="list-group-item list-group-item-action bg-autor-active" aria-current="true">
                 <div class="d-flex w-100 justify-content-between">
                 </div>
                 <p class="mb-1 fst-italic">Humaitá Restó</p>
                 <p class="mb-1 fst-italic">Hamburguesería y Pizzería Milenio</p>
                 
-              </a>
-              <a href="" class="list-group-item list-group-item-action bg-autor-active">
+              </div>
+              <div class="list-group-item list-group-item-action bg-autor-active">
                 <div class="d-flex w-100 justify-content-between">
                 </div>
                 <p class="mb-1 fst-italic">Restaurante Corona</p>
                 <p class="mb-1 fst-italic">Mister Kombi</p>
-              </a>
-              <a href="" class="list-group-item list-group-item-action bg-autor-active">
+              </div>
+              <div class="list-group-item list-group-item-action bg-autor-active">
                 <div class="d-flex w-100 justify-content-between">
                 </div>
                 <p class="mb-1 fst-italic">Pasteles Sabrosur</p>
                 <p class="mb-1 fst-italic">Chipería la Pilarense</p>
-              </a>
-              <a href="" class="list-group-item list-group-item-action bg-autor-active">
+              </div>
+              <div class="list-group-item list-group-item-action bg-autor-active">
                 <div class="d-flex w-100 justify-content-between">
                 </div>
                 <p class="mb-1 fst-italic">Punto Dulce</p>
                 <p class="mb-1 fst-italic">Quiero Fruta</p>
                 <p class="mb-1 fst-italic">Milatto</p>
-              </a>
+              </div>
             </div>
           </div>
         </div>
