--- a/personajes.html
+++ b/personajes.html
@@ -82,14 +82,14 @@
         class="section card mx-5 py-5 my-5 shadow-lg rounded border-0 bg-img"
         id="section2"
       >
-        <div class="container">
+        <div class="container mb-5">
           <div class="row">
 
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="py-4">
                 <img
                   src="img/Andrés_Guevara.png"
-                  class="img-fluid rounded-circle shadow-lg" style="width: 50vh;"
+                  class="img-fluid rounded-circle" style="width: 50vh;"
                 />
                 <h5 class="text-center card-title my-3">Andrés Guevara</h5>
                 <p class="parrafo">
@@ -101,7 +101,7 @@
               <div class="py-4">
                 <img
                   src="img/CarlosMiguelJiménez.jpg"
-                  class="img-fluid rounded-circle shadow-lg" style="width: 50vh;"
+                  class="img-fluid rounded-circle" style="width: 50vh;"
                 />
                 <h5 class="text-center card-title my-3">Carlos Miguel Jiménez</h5>
                 <p class="parrafo">
@@ -304,45 +304,6 @@
       </section>
     </main>
 
-    <footer>
-      <div class="container my-sm-5">
-        <div class="row">
-          <div class="col">
-            <div class="px-4 pt-5 my-5 text-center">
-              <h1 class="display-4 fw-bold">Equipo ICA</h1>
-              <div class="col-lg-6 mx-auto">
-                <p class="lead">
-                  Comentanos hasta ahora que teb parecio esta aventura en nuestra página web
-                </p>
-                <div
-                  class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5"
-                >
-                  <a
-                    href="https://www.instagram.com/arii_barb/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw=="
-                    class="btn btn-primary btn-ig btn-lg px-4 me-sm-3"
-                    target="_blank"
-                    >Nuestro Instagram
-                    <i class="fab fa-instagram"></i>
-                  </a>
-                  <a href="feedback.html"
-                    type="button"
-                    class="btn btn-outline-secondary btn-lg px-4"
-                    >
-                    Envianos un Email
-                    <i class="fab fa-solid fa-envelope"></i>
-                  </a>
-                    
-                </div>
-              </div>
-              <div class="overflow-hidden">
-                <div class="container px-5">
-                  <img src="img/travel.png" class="img-fluid" alt="Example image">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
+    
   </body>
 </html>
